[package]
authors = ["Sunli <sunlipad4@icloud.com>"]
edition = "2021"
name = "abc"
version = "0.1.0"

[dependencies]
async-graphql = "3.0.38"
async-graphql-poem = "3.0.38"
poem = "1.3.24"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
